(WIP) registration persistence
